...
    context = context.baseContext
  }
  return null
}

object CreateAccountTestTags {
  const val HANDLE_FIELD = "CreateAccountHandleField"
  const val HANDLE_ERROR = "CreateAccountHandleError"
  const val USERNAME_FIELD = "CreateAccountUsernameField"
  const val USERNAME_ERROR = "CreateAccountUsernameError"
  const val SUBMIT_BUTTON = "CreateAccountSubmitButton"
  const val CHECKBOX_OWNER = "CreateAccountCheckboxOwner"
  const val CHECKBOX_RENTER = "CreateAccountCheckboxRenter"
  const val HANDLE_INFO_ICON = "CreateAccountHandleInfoIcon"
}

object CreateAccountScreenUi {
...
